--- a/README
+++ b/README
@@ -10,6 +10,7 @@ HTML
 CSS
 JavaScript
 Bootstrap
+FontAwesome (icons)
 
 ## Installation
 git clone https://github.com/menna-saed/Mealify_Website.git
