--- a/README
+++ b/README
@@ -16,6 +16,9 @@ FontAwesome (icons)
 git clone https://github.com/menna-saed/Mealify_Website.git
 cd Mealify
 
+## Live Demo
+https://menna-saed.github.io/Mealfiy_Website/
+
 ## Project Status
 Finished ✅
                       
